Map.of not supported in jdk8