@@ -19,6 +19,7 @@
 
 package org.apache.pinot.core.data.manager.realtime;
 
+import com.google.common.collect.ImmutableMap;
 import java.net.URISyntaxException;
 import java.util.HashMap;
 import java.util.Map;
@@ -39,7 +40,7 @@ import org.testng.annotations.Test;
 public class SegmentCommitterFactoryTest {
 
   private Map<String, String> getMinimumStreamConfigMap() {
-    return Map.of(
+    return ImmutableMap.of(
         "streamType", "kafka",
         "stream.kafka.consumer.type", "simple",
         "stream.kafka.topic.name", "ignore",
